--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "portfolio",
   "homepage": "https://kev-in-techs.github.io/portfolio",
-  "private": true,
+  "name": "portfolio",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
